--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@fastify/cors": "^8.5.0",
     "amqplib": "^0.10.3",
     "fastify": "^4.25.2",
     "ioredis": "^5.3.2",
