--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "dependencies": {
     "@fastify/cors": "^8.5.0",
     "amqplib": "^0.10.3",
+    "dotenv": "^16.3.1",
     "fastify": "^4.25.2",
     "ioredis": "^5.3.2",
     "mysql2": "^3.7.0",
